# AMS

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  repomix-out.xml  start.sh  test_out.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260416_1840_a19dec4cc1b6_initial_ams_schema.py  20260418_1854_84264b56dee2_add_matric_num_and_admission_session.py  20260421_0000_a8f3c9d2e1b4_add_notification_tables.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: script.py.mako
backend/alembic/versions/: 20260418_2043_62bd1310aaef_array_roles.py  20260419_1800_3f7e2a91c4d5_offering_lecturers_junction_table.py  20260421_0000_a8f3c9d2e1b4_add_notification_tables.py  20260607_1600_strip_material_file_urls.py
backend/scripts/: create_minio_bucket.sh  update_user_roles.py
backend/src/app/: config.py  dependencies.py  main.py
backend/src/app/_gemini_code_review/: dependencies.py.review.json  manifest.json
backend/src/app/api/: router.py
backend/src/app/core/: arq_pool.py  events.py  security.py
backend/src/app/models/: __init__.py  announcement.py  class_session.py  gradebook.py  material.py  notification.py  task.py  user.py
backend/src/app/repositories/: __init__.py  academic.py  base.py  course.py  session.py  task.py  user.py
backend/src/app/schemas/: announcement.py  course.py  material.py  session.py  student.py  task.py  user.py  utils.py
backend/src/app/services/: admin.py  ai_tutor.py  analytics.py  auth.py  course.py  lecturer.py  shared.py  storage.py  user.py
backend/src/app/workers/: tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_academic.py  test_admin_faculties_depts.py  test_analytics.py  test_auth.py  test_auth_middleware.py  test_auth_password_reset.py  test_lecturer_submissions.py  test_shared_endpoints.py  test_student_announcements.py
backend/tests/unit/: conftest.py  test_middleware_coverage.py  test_storage_service.py  test_storage_utils.py  test_user_service.py
docs/: AI_DESIGN.md  ARCHITECTURE.md  BUSINESS_RULES.md  DATABASE_SCHEMA.md  DOC_HISTORY.md  ENDPOINTS.md  ENDPOINTS_DETAIL.md  SETUP.md  TASK_HISTORY.md  architecture.md  architecture.patch  repomix-output.xml
frontend/: .dockerignore  Dockerfile  FRONTEND_SPEC.md  pnpm-lock.yaml
scripts/: create_admin.py
src/app/: config.py  dependencies.py  exceptions.py
src/app/api/: router.py
src/app/api/_gemini_code_review/: __init__.py.review.json  router.py.review.json
src/app/api/v1/: admin.py  auth.py  health.py  hod.py  lecturer.py  notifications.py  shared.py  student.py
src/app/core/: database.py  events.py  redis.py
src/app/core/_gemini_code_review/: database.py.review.json  events.py.review.json
src/app/middleware/: __init__.py  active_semester.py  auth.py  logging.py  security.py  session_owner.py  tracing.py
src/app/middleware/_gemini_code_review/: security.py.review.json
src/app/models/: __init__.py  academic_session.py  base.py  course.py  department.py  faculty.py  notification.py  user.py
src/app/repositories/: announcement.py  course.py  department.py  faculty.py  gradebook.py  material.py  notification.py  task.py  token.py  user.py
src/app/schemas/: __init__.py  admin.py  ai_tutor.py  analytics.py  announcement.py  auth.py  course.py  gradebook.py  material.py  notification.py  session.py  student.py  task.py  user.py
src/app/services/: admin.py  auth.py  course.py  lecturer.py  shared.py  storage.py  student.py  user.py
src/app/services/notification/: emitter.py  events.py  registry.py
src/app/workers/: __init__.py  tasks.py
test_pages/: index.html  register.html  seed.html
test_pages/admin/: index.html  setup.html  staff.html
test_pages/hod/: courses.html  index.html  lecturers.html  setup.html  students.html
test_pages/lecturer/: announcements.html  approvals.html  index.html  lecturers.html  tasks.html
test_pages/materials/: index.html  manage.html
test_pages/shared/: api.js  auth.js  layout.js  style.css
test_pages/student/: enrollment.html  index.html
tests/: conftest.py
tests/integration/: test_admin_academic.py  test_admin_coverage.py  test_admin_faculties_depts.py  test_ai_tutor.py  test_auth.py  test_auth_user_updates.py  test_courses_hod.py  test_courses_student.py  test_lecturer_announcements.py  test_lecturer_courses.py  test_lecturer_gradebook.py  test_lecturer_materials.py  test_lecturer_sessions.py  test_lecturer_submissions.py  test_lecturer_tasks.py  test_shared_endpoints.py  test_student_announcements.py  test_student_materials.py  test_student_sessions_attendance.py  test_student_tasks_submissions_grades.py  test_user_coverage.py  test_user_management.py
tests/unit/: test_health_coverage.py  test_user_service.py
(+13 files in other folders)
